TravisCI/SonarCloud automation

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,17 @@
 language: node_js
 node_js:
   - "lts/*"
+
+dist: trusty
+sudo: required
+
+addons:
+  sonarcloud:
+    organization: "jpointi-github"
+jdk:
+  - oraclejdk8
+script:
+  - sonar-scanner
+cache:
+  directories:
+    - '$HOME/.sonar/cache'
